--- a/examples/sha/Cargo.toml
+++ b/examples/sha/Cargo.toml
@@ -14,6 +14,4 @@ hex = "0.4"
 serial_test = "2.0"
 
 [features]
-cuda = ["risc0-zkvm/cuda"]
-default = []
-metal = ["risc0-zkvm/metal"]
+soundness = ["risc0-zkvm/soundness"]
