--- a/risc0/zkp/Cargo.toml
+++ b/risc0/zkp/Cargo.toml
@@ -20,6 +20,7 @@ digest = { version = "0.10", features = ["oid"] }
 ff = { version = "0.13", features = ["derive", "bits"], optional = true }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 lazy_static = { version = "1.4", optional = true }
+libm = "0.2"
 metal = { version = "0.25", optional = true }
 paste = "1.0"
 rand_core = "0.6"
@@ -60,3 +61,4 @@ prove = [
   "std",
 ]
 std = ["anyhow/std"]
+soundness = []
